--- a/packages/botonic-react/src/webchat.template.html
+++ b/packages/botonic-react/src/webchat.template.html
@@ -26,7 +26,7 @@
     <div id="root"></div>
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function(event) {
-        Botonic.render(document.getElementById('root'))
+        Botonic.render({ dest: document.getElementById('root') })
       })
     </script>
   </body>
